force-app/main/default/objects/animalos__Coordinates__c/animalos__Coordinates__c.object-meta.xml
<CustomObject>
    <label>Coordinates</label>
    <nameField>
        <displayFormat>C{000000000}</displayFormat>
        <label>Coordinates ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coordinates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>