force-app/main/default/objects/animalos__Coordinates__c/fields/animalos__Altitude__c.field-meta.xml
<CustomField>
    <fullName>animalos__Altitude__c</fullName>
    <label>Altitude</label>
    <precision>10</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>