force-app/main/default/objects/animalos__Coordinates__c/fields/animalos__Latitude__c.field-meta.xml
<CustomField>
    <fullName>animalos__Latitude__c</fullName>
    <label>Latitude</label>
    <precision>10</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>