force-app/main/default/objects/animalos__Coordinates__c/fields/animalos__Polygon__c.field-meta.xml
<CustomField>
    <fullName>animalos__Polygon__c</fullName>
    <label>Polygon</label>
    <referenceTo>animalos__Polygon__c</referenceTo>
    <relationshipLabel>Coordinates</relationshipLabel>
    <relationshipName>Coordinates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>